<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nuoroda1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/egzai_nuorodos"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="20sp" />


        <LinearLayout
            android:id="@+id/nuorodos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nuoroda1"
            android:orientation="vertical">


            <Button
                android:id="@+id/nuoroda2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/marginButton"
                android:layout_marginRight="@dimen/marginButton"
                android:layout_marginBottom="10dp"
                android:background="@drawable/buttonbackground"
                android:onClick="atidarytiNEC"
                android:text="@string/egzai_nuorodos2" />

            <Button
                android:id="@+id/nuoroda3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/marginButton"
                android:layout_marginRight="@dimen/marginButton"
                android:layout_marginBottom="10dp"
                android:background="@drawable/buttonbackground"
                android:onClick="atidarytiMokslinciu"
                android:text="@string/egzai_nuorodos3" />

            <Button
                android:id="@+id/atmintine"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/marginButton"
                android:layout_marginRight="@dimen/marginButton"
                android:layout_marginBottom="10dp"
                android:background="@drawable/buttonbackground"
                android:onClick="atidarytiAtmintine"
                android:text="@string/atmintine_abiturientui" />

            <Button
                android:id="@+id/duk"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/marginButton"
                android:layout_marginRight="@dimen/marginButton"
                android:layout_marginBottom="10dp"
                android:background="@drawable/buttonbackground"
                android:onClick="atidarytiDUK"
                android:text="Abituriento DUK" />

            <Button
                android:id="@+id/atmintine2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/marginButton"
                android:layout_marginRight="@dimen/marginButton"
                android:layout_marginBottom="10dp"
                android:background="@drawable/buttonbackground"
                android:onClick="atidarytiAtmintine2"
                android:text="VPPT atmintinė moksleiviams" />

            <Button
                android:id="@+id/skaiciuokle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/marginButton"
                android:layout_marginRight="@dimen/marginButton"
                android:layout_marginBottom="10dp"
                android:background="@drawable/buttonbackground"
                android:onClick="atidarytiSkaiciuokle"
                android:text="LKL VBE rezultato skaičiuoklė" />

        </LinearLayout>

        <TextView
            android:id="@+id/zaidimai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nuorodos"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:paddingTop="50dp"
            android:text="Žaidimai"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="20sp" />

        <Button

            android:id="@+id/kitasb9"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/zaidimai"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/marginButton"
            android:layout_marginRight="@dimen/marginButton"
            android:layout_marginBottom="10dp"
            android:background="@drawable/buttonbackground"
            android:onClick="atidarytiZaidima"
            android:text="Kryžiukai-nuliukai" />


    </RelativeLayout>

</ScrollView>
